--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
-title                    : "Your Name / Site Title"
+locale                   : "JP"
+title                    : "HXH / Assistant Professor"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
