--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 # Basic Site Settings
 locale                   : "JP/CN"
 title                    : "Assistant Professor"
-title_separator          : ""
+title_separator          : "-"
 name                     : &name "Xinhao He"
 description              : &description "personal description"
-URL                      : "https://hoshinoktu.github.io/he-xinhao/" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+URL                      : https://hoshinoktu.github.io/he-xinhao/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "" # academicpages/academicpages.github.io
 
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : # ""
+  googlescholar    : #
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0002-7162-6719"
   semantic         : # URL
