--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "Xinhao He"
 description              : &description "personal description"
 URL                      : https://hoshinoktu.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "/he-xinhao/" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io" # 
+repository               : "https://github.com/HoshinoKTU/he-xinhao" # 
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
