--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : "Dr. He" # example: "she/her"  
   bio              : "Researcher"
   location         : "JP/CN"
-  employer         : "Tohoku University"
+  employer         : "Graduate School of Engineering, Tohoku University"
   URI              : # URL
   email            : "xinhao.he.a8@tohoku.ac.jp" 
 
@@ -36,20 +36,20 @@ author:
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0002-7162-6719"
   semantic         : # URL
-  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  PubMed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : "https://researchmap.jp/xinhao.he_1520?lang=en"# URL
   scopus           : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : # "academicpages"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
